# Milcah

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feedback.yml
docs/: architecture-decisions.md  architecture.md  philosophy.md  process.cairn.md  requirements.md
okf/: index.md
okf/concepts/: burden-symmetry.md  coherence-engine.md  index.md  reasoning-units.md  recursive-pressure-testing.md  sibling-integration.md
okf/modules/: challenge.md  cli.md  extraction.md  fallacy.md  hoglah-extractor.md  index.md  ingestion.md  metrics.md  models.md  multi-llm.md  ontology-debate.md  ontology.md  orchestration.md  persistence.md  recursive.md  rounds.md
src/milcah/: __init__.py  challenge.py  cli.py  contract.py  extraction.py  fallacy.py  hoglah_extractor.py  ingestion.py  manifest.py  metrics.py  model_selection.py  models.py  multi_llm.py  ontology.py  ontology_debate.py  ontology_placement.py  orchestration.py  persistence.py  recursive.py  rounds.py  store_mongo.py  web_research.py
tests/: test_challenge.py  test_contract.py  test_extraction.py  test_fallacy.py  test_hoglah_extractor.py  test_ingestion.py  test_manifest.py  test_metrics.py  test_model_selection.py  test_multi_llm.py  test_ontology.py  test_ontology_debate.py  test_ontology_placement.py  test_orchestration.py  test_persistence.py  test_recursive.py  test_rounds.py  test_smoke.py  test_store_mongo.py  test_web_research.py
