[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milcah"
version = "0.2.0"
description = "Milcah — the Coherence Engine: recursive, multi-LLM coherence pressure-testing of frameworks and worldviews."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["coherence", "reasoning", "ontology", "llm", "epistemics", "agentic"]

dependencies = [
    "keturah>=0.1",  # LLM-interface manifest (build_manifest / to_mcp)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# MongoDB-backed snapshot store (FR10) — the shared family persistence layer.
mongo = ["pymongo>=4.6"]
# Delegate ontology debate to Mahalath (FR3): query its debated ontology for
# polysemy / staleness to inform placement. Needs mahalath + pymongo.
mahalath = ["mahalath>=1.1.0", "pymongo>=4.6"]
# LLM-backed extraction executed through Hoglah (FR2 quality path).
hoglah = ["hoglah>=0.8.0"]
hoglah-kafka = ["hoglah>=0.8.0", "confluent-kafka>=2.3"]
hoglah-rabbitmq = ["hoglah>=0.8.0", "pika>=1.3"]
hoglah-redis = ["hoglah>=0.8.0", "redis>=5.0"]

[project.scripts]
milcah = "milcah.cli:main"

[project.urls]
Homepage = "https://github.com/gellsmore-svg/Milcah"
Repository = "https://github.com/gellsmore-svg/Milcah"
Issues = "https://github.com/gellsmore-svg/Milcah/issues"

[tool.setuptools.packages.find]
where = ["src"]
